--- a/index.html
+++ b/index.html
@@ -5,12 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Modal - pop up</title>
-    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/global.css" />
   </head>
   <body>
     <header>
       <h1>Modal - pop up</h1>
       <button id="open-modal-btn">Abrir</button>
     </header>
+
+    <main>
+      <article class="fade"></article>
+      <article class="modal">
+        <section id="modal-header">
+          <h2>Modal</h2>
+          <button id="close-modal">
+            <i class="bi bi-x-lg"></i>
+          </button>
+        </section>
+
+        <section id="modal-body">
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate
+            consequatur harum modi recusandae alias. Optio natus error ea
+            quisquam placeat.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
+            quisquam, repellat error vitae sed voluptatibus quam deleniti harum
+            blanditiis aliquid tempore atque accusamus nobis in.
+          </p>
+        </section>
+      </article>
+    </main> 
   </body>
 </html>
