--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Modal - pop up</title>
     <link rel="stylesheet" href="css/global.css" />
+    <link rel="stylesheet" href="css/buttons.css">
   </head>
   <body>
     <header>
@@ -18,7 +19,7 @@
       <article class="modal">
         <section id="modal-header">
           <h2>Modal</h2>
-          <button id="close-modal">
+          <button id="close-modal-btn">
             <i class="bi bi-x-lg"></i>
           </button>
         </section>
