The modal structure has been done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Modal - pop up</title>
     <link rel="stylesheet" href="css/global.css" />
     <link rel="stylesheet" href="css/buttons.css">
+    <link rel="stylesheet" href="css/modal.css">
   </head>
   <body>
     <header>
@@ -15,8 +16,8 @@
     </header>
 
     <main>
-      <article class="fade"></article>
-      <article class="modal">
+      <article class="fade hide"></article>
+      <article class="modal hide">
         <section id="modal-header">
           <h2>Modal</h2>
           <button id="close-modal-btn">
