Footer has been added

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Modal - pop up</title>
     <link rel="stylesheet" href="css/global.css" />
-    <link rel="stylesheet" href="css/buttons.css">
-    <link rel="stylesheet" href="css/modal.css">
+    <link rel="stylesheet" href="css/buttons.css" />
+    <link rel="stylesheet" href="css/modal.css" />
+    <link rel="stylesheet" href="css/footer.css" />
   </head>
   <body>
     <header>
@@ -38,7 +39,23 @@
           </p>
         </section>
       </article>
-    </main> 
+    </main>
+
+    <footer>
+      <p>Desenvolvido por Matheus Vieira Ferreira</p>
+      <div class="links">
+        <a href="https://github.com/matheusvieira17" target="_blank">
+          <i class="bi bi-github"></i>
+        </a>
+
+        <a
+          href="https://www.linkedin.com/in/matheus-vieira-ferreira-806767229/"
+          target="_blank"
+        >
+          <i class="bi bi-linkedin"></i>
+        </a>
+      </div>
+    </footer>
   </body>
   <script src="modal.js"></script>
 </html>
